--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,16 +39,26 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(Bowling)
 
+set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+find_package(Boost 1.67.0 COMPONENTS filesystem system)
+
+
 set(SRC_LIST
     src/Bowling.cpp
     src/Frame.cpp
     src/Game.cpp
+    src/Line.cpp
 )
 
-include_directories(src)
-include_directories(inc)
-add_library(${PROJECT_NAME}-lib ${SRC_LIST})
-add_executable(${PROJECT_NAME} src/main.cpp)
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+    include_directories(src)
+    include_directories(inc)
+    add_library(${PROJECT_NAME}-lib ${SRC_LIST})
+    add_executable(${PROJECT_NAME} src/main.cpp ${Boost_LIBRARIES})
+endif()
 
 if (UNIX)
     target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-lib pthread)
@@ -63,6 +73,9 @@ set(TEST_SRC_LIST
     tests/test_main.cpp
 )
 
-link_libraries(gtest)
-add_executable(${PROJECT_NAME}-ut ${TEST_SRC_LIST})
-target_link_libraries(${PROJECT_NAME}-ut ${PROJECT_NAME}-lib)
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+    link_libraries(gtest)
+    add_executable(${PROJECT_NAME}-ut ${TEST_SRC_LIST})
+    target_link_libraries(${PROJECT_NAME}-ut ${PROJECT_NAME}-lib ${Boost_LIBRARIES})
+endif()
